--- a/.github/ISSUE_TEMPLATE/機能追加.md
+++ b/.github/ISSUE_TEMPLATE/機能追加.md
@@ -1,10 +1,20 @@
 ---
-name: バグレポート
-about: Create a report to help us improve
+name: 機能追加
+about: このプロジェクトの機能追加や仕様変更のissue
 title: ''
-labels: bug
+labels: enhancement
 assignees: ''
 
 ---
 
-**バグの説明**
+**機能要求の内容の記述**
+何が問題なのか、明確かつ簡潔な説明。
+
+**解決策を記述してください**
+起こしたいことの明確かつ簡潔な説明。
+
+**検討した代替案**
+代替案や機能についての明確かつ簡潔な説明。
+
+**備考**
+その他、機能要望の背景やスクリーンショットをここに追加してください。
